[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataguard"
version = "1.0.0"
description = "DataGuard OpenEnv environment"
requires-python = ">=3.10"
authors = [{ name = "GKK1" }]
dependencies = [
  "pydantic",
  "fastapi",
  "uvicorn",
  "pandas",
  "numpy",
  "openai",
  "requests",
  "python-multipart",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
